rust/node-structuring/tests/snapshots/examples__math-to-citations-superscript.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "The equation "
          }
        },
        {
          "type": "MathInline",
          "code": {
            "string": "x^2 + y^2 = z^2"
          },
          "mathLanguage": "tex"
        },
        {
          "type": "Text",
          "value": {
            "string": " and "
          }
        },
        {
          "type": "MathInline",
          "code": {
            "string": "{b}^{3}"
          },
          "mathLanguage": "tex"
        },
        {
          "type": "Text",
          "value": {
            "string": " are not treated as citations. But this "
          }
        },
        {
          "type": "Citation",
          "target": "ref-1",
          "citationMode": "Parenthetical",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "1"
              }
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": ", "
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref-3",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "3"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-7",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "7"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " , and "
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref-2",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "2"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-3",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "3"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-4",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "4"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " are treated as superscript citations."
          }
        }
      ]
    }
  ]
}
