rust/node-structuring/tests/snapshots/examples__normalize-citations-basic-parentheses.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Smith argues "
          }
        },
        {
          "type": "Citation",
          "target": "smith-2023",
          "citationMode": "Parenthetical",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Smith 2023"
              }
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " that this is true."
          }
        }
      ]
    }
  ],
  "structuring": [
    "normalize-citations"
  ]
}
