rust/node-structuring/tests/snapshots/examples__normalize-citations-bracket-mismatches.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Unmatched opening "
          }
        },
        {
          "type": "Citation",
          "target": "ref1",
          "citationMode": "Parenthetical",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "1"
              }
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " and unmatched closing "
          }
        },
        {
          "type": "Citation",
          "target": "ref2",
          "citationMode": "Narrative",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "2"
              }
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " and mixed "
          }
        },
        {
          "type": "Citation",
          "target": "ref3",
          "citationMode": "Parenthetical",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "3"
              }
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " brackets."
          }
        }
      ]
    }
  ],
  "structuring": [
    "normalize-citations"
  ]
}
