rust/node-structuring/tests/snapshots/examples__normalize-citations-citation-then-group.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "A single citation followed by a comma and then a citation group"
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref-1",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "1"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-2",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "2"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-3",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "3"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": ", a single citation followed by a dash and then a citation group"
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref-5",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "5"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-6",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "6"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-7",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "7"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-8",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "8"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": ", and a single citation followed directly by a citation group with no separator"
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref-10",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "10"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-11",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "11"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-12",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "12"
                  }
                }
              ]
            }
          ]
        }
      ]
    }
  ],
  "structuring": [
    "normalize-citations"
  ]
}
