rust/node-structuring/tests/snapshots/examples__normalize-citations-group-then-group.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "A citation group followed by a comma and then another citation group"
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref-1",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "1"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-2",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "2"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-4",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "4"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-5",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "5"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": ", a citation group followed by a dash and then another citation group"
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref-7",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "7"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-8",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "8"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-10",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "10"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-11",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "11"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": ", and a citation group followed directly by another citation group with no separator"
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref-13",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "13"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-14",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "14"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-15",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "15"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-16",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "16"
                  }
                }
              ]
            }
          ]
        }
      ]
    }
  ],
  "structuring": [
    "normalize-citations"
  ]
}
